[package]
edition = "2021"
name = "t-napi"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
winapi={version="0.3.9", features=["winusb", "ioapiset","handleapi","fileapi","winerror", "winbase", "errhandlingapi"]}
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
